# ichilov_anonimizer

./: .gitignore  Check_PyTorch_Version.MD  README.md  README_Dev.md  TODO.txt  de_identify.py  de_identify_orig.py  pyproject.toml  reqruirements.txt  requirements.txt  validate_offsets.py
dev_scripts/: gpr.bat  gpr.ps1  gpr.sh
docs/: Check_PyTorch_Version.md  Deid_Pipeline_Usage.md  Deidentification_Regression_Tests_Design.md  Experiments.md  Pipeline_Pattern_Rewrite.md  Questions_for_KAI.md  הצעה למתווה התממה של טקסט רפואי - נמל מבטחים.md
dummy_data/: test.csv  test_deid_label.csv  test_deid_label.json  test_deid_label_2.csv  test_deid_label_2_deid_label.csv  test_deid_label_2_deid_label.json  test_deid_label_2_deid_label_pipeline.csv  test_deid_label_2_deid_label_pipeline.json  test_deid_label_2_deid_mask_pipeline.csv  test_deid_label_2_deid_mask_pipeline.json  test_deid_label_pipeline.csv  test_deid_label_pipeline.json
safe_harbor_reference/: anonymize.py  lab.ipynb  med_organizations.csv  med_organizations_list_raw.csv  org_list_manipulation.ipynb  requirements.txt
tests/: test_deidentification_regression.py
utils/: doc_pipeline.py  nlp_utils.py  pipeline_stages.py  pipeline_utils.py
